--- a/app/src/main/res/layout/meminta_histori.xml
+++ b/app/src/main/res/layout/meminta_histori.xml
@@ -44,7 +44,7 @@
 
         <TextView
             android:id="@+id/tv1"
-            android:layout_width="130dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nama Karyawan"
             android:textSize="16sp" />
@@ -53,7 +53,7 @@
             android:layout_toRightOf="@+id/tv1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=": "
+            android:text=" : "
             android:textSize="16sp" />
 
         <TextView
@@ -67,7 +67,7 @@
         <TextView
             android:id="@+id/tv2"
             android:layout_below="@+id/tv1"
-            android:layout_width="130dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nama Kasir"
             android:textSize="16sp" />
@@ -77,7 +77,7 @@
             android:layout_below="@+id/tv11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=": "
+            android:text=" : "
             android:textSize="16sp" />
         <TextView
             android:id="@+id/tv_namaKasir"
@@ -91,7 +91,7 @@
         <TextView
             android:id="@+id/tv3"
             android:layout_below="@+id/tv2"
-            android:layout_width="130dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Total Transaksi"
             android:textSize="16sp" />
@@ -101,7 +101,7 @@
             android:layout_below="@+id/tv22"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=": "
+            android:text=" : "
             android:textSize="16sp" />
         <TextView
             android:id="@+id/tv_totalTransaksi"
@@ -110,6 +110,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Total Transaksi"
+            android:textSize="16sp" />
+        <TextView
+            android:id="@+id/tv_tanggal"
+            android:layout_below="@+id/tv3"
+            android:layout_alignParentEnd="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tanggal"
             android:textSize="16sp" />
 
 
