--- a/app/src/main/res/layout/meminta_nota.xml
+++ b/app/src/main/res/layout/meminta_nota.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rl_layoutnota"
-    android:background="@color/warnaNota1"
+    android:background="@color/puteh"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="2dp"
@@ -30,30 +30,40 @@
 
         <TextView
             android:id="@+id/tv_jml"
-            android:layout_toLeftOf="@+id/tv_hargaAwal"
-            android:layout_centerInParent="true"
-            android:layout_width="20dp"
+            android:layout_below="@+id/tv_nama"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="7dp"
+            android:layout_marginLeft="7dp"
             android:text="J"
+
+            android:textSize="16sp" />
+        <TextView
+            android:id="@+id/tv_kali"
+            android:layout_alignBaseline="@+id/tv_jml"
+            android:layout_toRightOf="@+id/tv_jml"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="7dp"
+            android:text="x"
 
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/tv_hargaAwal"
-
-            android:layout_toLeftOf="@+id/tv_total"
-            android:layout_width="80dp"
+            android:id="@+id/tv_hargaJual"
+            android:layout_toRightOf="@+id/tv_kali"
+            android:layout_alignBaseline="@+id/tv_jml"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:text="00000000"
+            android:layout_marginLeft="9dp"
+            android:text="Harga"
             android:textSize="16sp"
             />
 
         <TextView
             android:id="@+id/tv_total"
+            android:layout_alignBaseline="@+id/tv_jml"
             android:layout_alignParentRight="true"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="7dp"
             android:text="Total"
