--- a/app/src/main/res/layout/fragment_detailuser_boss.xml
+++ b/app/src/main/res/layout/fragment_detailuser_boss.xml
@@ -114,6 +114,7 @@
             android:id="@+id/btn_karyawan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_shape"
             android:layout_gravity="center"
             android:layout_marginTop="36dp"
             android:text="Angkat Karyawan"
@@ -123,6 +124,7 @@
             android:id="@+id/btn_kasir"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_shape"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
             android:text="Angkat Kasir"
@@ -132,6 +134,7 @@
             android:id="@+id/btn_phk"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_shape"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
             android:text="PHK"
