--- a/app/src/main/res/layout/fragment_transaksi.xml
+++ b/app/src/main/res/layout/fragment_transaksi.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimary"
-        android:textSize="28sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         android:layout_gravity="center"
         android:text="Transaksi Penjualan" />
@@ -38,6 +38,7 @@
                     android:layout_toLeftOf="@+id/skat"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/button_shape"
                     android:layout_alignParentBottom="true"
                     android:layout_centerInParent="true"
                     android:layout_marginTop="16dp"
@@ -58,6 +59,7 @@
                     android:layout_toRightOf="@+id/skat"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/button_shape"
                     android:layout_alignParentBottom="true"
                     android:layout_centerInParent="true"
                     android:layout_marginTop="16dp"
