--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/activity_main_drawer"
-        android:background="@color/menuKaryawan"/>
+        android:background="@color/menuKaryawan"
+        />
 
 </android.support.v4.widget.DrawerLayout>
