--- a/app/src/main/res/layout/fragment_detail_transaksi.xml
+++ b/app/src/main/res/layout/fragment_detail_transaksi.xml
@@ -21,7 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimary"
-                android:textSize="28sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_gravity="center"
                 android:text="Detail : " />
@@ -30,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimary"
-                android:textSize="28sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_gravity="center"
                 android:text="Detail " />
@@ -74,13 +74,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="24sp"
+                    android:textSize="18sp"
                     android:text="Total : " />
                 <TextView
                     android:id="@+id/tv_totalTransaksi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="24sp"
+                    android:textSize="18sp"
                     android:layout_marginRight="4dp"
                     android:text="Total" />
 
@@ -91,6 +91,7 @@
                 android:layout_toLeftOf="@+id/skat1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/button_shape"
                 android:layout_alignParentBottom="true"
                 android:layout_centerInParent="true"
                 android:layout_marginTop="16dp"
@@ -111,6 +112,7 @@
                 android:layout_toRightOf="@+id/skat1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/button_shape"
                 android:layout_alignParentBottom="true"
                 android:layout_centerInParent="true"
                 android:layout_marginTop="16dp"
