--- a/app/src/main/res/layout/fragment_edit_data.xml
+++ b/app/src/main/res/layout/fragment_edit_data.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimary"
-            android:textSize="28sp"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:layout_gravity="center"
             android:text="Edit Barang" />
@@ -175,6 +175,7 @@
             android:id="@+id/btn_cancel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_shape"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
             android:text="Cancel"
