--- a/app/src/main/res/layout/fragment_nota_pembayaran.xml
+++ b/app/src/main/res/layout/fragment_nota_pembayaran.xml
@@ -19,6 +19,7 @@ tools:context=".kasir.NotaPembayaranFragment">
             android:id="@+id/btn_pdf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_shape"
             android:layout_alignParentRight="true"
             android:layout_alignBaseline="@id/tv_header"
             android:text="PDF"/>
@@ -30,15 +31,16 @@ tools:context=".kasir.NotaPembayaranFragment">
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:text="Nota"
-            android:textSize="28sp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_kode"
             android:layout_below="@id/tv_header"
+            android:layout_marginTop="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Kode   : "
-            android:textSize="18sp" />
+            android:layout_marginLeft="7dp"
+            android:text="Kode   : " />
 
         <TextView
             android:id="@+id/tv_kodeTransaksi"
@@ -46,16 +48,15 @@ tools:context=".kasir.NotaPembayaranFragment">
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/tv_kode"
             android:layout_alignBaseline="@id/tv_kode"
-            android:text="-"
-            android:textSize="18sp" />
+            android:text="-" />
 
         <TextView
             android:id="@+id/tv_nama1"
             android:layout_below="@id/tv_kode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nama Kasir : "
-            android:textSize="18sp" />
+            android:layout_marginLeft="7dp"
+            android:text="Nama Kasir : " />
 
         <TextView
             android:id="@+id/tv_namaKasir"
@@ -63,16 +64,15 @@ tools:context=".kasir.NotaPembayaranFragment">
             android:layout_alignBaseline="@+id/tv_nama1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="-"
-            android:textSize="18sp"/>
+            android:text="-"/>
 
         <TextView
             android:id="@+id/tv_nama2"
             android:layout_below="@id/tv_nama1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nama Karyawan : "
-            android:textSize="18sp" />
+            android:layout_marginLeft="7dp"
+            android:text="Nama Karyawan : " />
 
         <TextView
             android:id="@+id/tv_namaKaryawan"
@@ -80,24 +80,22 @@ tools:context=".kasir.NotaPembayaranFragment">
             android:layout_alignBaseline="@+id/tv_nama2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="-"
-            android:textSize="18sp"/>
+            android:text="-"/>
 
         <TextView
             android:id="@+id/tv_tanggal"
-            android:layout_below="@+id/tv_nama2"
+            android:layout_alignBaseline="@+id/tv_kode"
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="7dp"
-            android:text="00/00/0000    00:00"
-
-            android:textSize="18sp" />
+            android:text="00/00/0000    00:00" />
 
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rc_list_request"
-            android:layout_below="@+id/tv_tanggal"
+            android:layout_below="@+id/tv_nama2"
+            android:layout_marginTop="10dp"
             android:background="@color/puteh"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -121,8 +119,7 @@ tools:context=".kasir.NotaPembayaranFragment">
             android:background="@color/puteh"
             android:layout="@id/rc_list_request"
             android:padding="7dp"
-            android:text="Rp.-"
-            android:textSize="16sp" />
+            android:text="Rp.-" />
 
     </RelativeLayout>
 
