--- a/app/src/main/res/layout/fragment_tambah_data.xml
+++ b/app/src/main/res/layout/fragment_tambah_data.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimary"
-            android:textSize="28sp"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:layout_gravity="center"
             android:text="Menambah Stock Baru" />
@@ -194,6 +194,7 @@
             android:id="@+id/btn_cancel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_shape"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
             android:text="Cancel"
