--- a/app/src/main/res/layout/fragment_updatestokdata.xml
+++ b/app/src/main/res/layout/fragment_updatestokdata.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimary"
-            android:textSize="28sp"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:layout_gravity="center"
             android:text="Menambah Stok Barang" />
@@ -156,7 +156,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/abang"
-            android:textSize="24sp"
+            android:textSize="18sp"
             android:textAlignment="center"
             android:text="Jumlah Setelah Di Update" />
     </LinearLayout>
@@ -184,6 +184,7 @@
             android:id="@+id/btn_cancel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_shape"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
             android:text="Cancel"
