--- a/app/src/main/res/layout/nav_header_kasir.xml
+++ b/app/src/main/res/layout/nav_header_kasir.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/autoworks"
+    android:background="@drawable/autoworks1"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -13,5 +13,19 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
 
+    <TextView
+        android:id="@+id/tv_user"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/abang"
+        android:textStyle="bold"
+        android:text="Nama" />
+
+    <TextView
+        android:id="@+id/tv_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/abang"
+        android:text="email" />
 
 </LinearLayout>
