--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -26,7 +26,7 @@
             android:title="Edit Barang" />
         <item
             android:id="@+id/nav_histori"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/ic_menu_histori"
             android:title="Histori Transaksi" />
 
     </group>
@@ -40,5 +40,6 @@
                 android:title="KE KASIR" />
         </menu>
     </item>
+
 
 </menu>
