--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="menuKaryawan">#e67300</color>
     <color name="menuKasir">#e6e600</color>
     <color name="kuning">#e6e600</color>
+    <color name="abu">#d9dddc</color>
 
 
 </resources>
