--- a/app/src/main/res/layout/fragment_home_boss.xml
+++ b/app/src/main/res/layout/fragment_home_boss.xml
@@ -9,38 +9,19 @@
 
 
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/rl_layouttransaksi"
-        android:background="@color/viewfinder_border"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        >
-
-
-        <TextView
-            android:id="@+id/tv_nama"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:text="Nama"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/tv_email"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="100dp"
-            android:text="Email"
-
-            android:textSize="12sp" />
-
-    </RelativeLayout>
+        android:layout_marginTop="20dp"
+        android:textColor="@color/ijo"
+        android:textStyle="bold"
+        android:text="Daftar Pegawai"
+        android:textSize="18sp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rc_list_request"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="60dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp"
