--- a/app/src/main/res/layout/fragment_updatestokdata.xml
+++ b/app/src/main/res/layout/fragment_updatestokdata.xml
@@ -155,6 +155,8 @@
             android:id="@+id/tv_jmlplus"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="5dp"
             android:textColor="@color/abang"
             android:textSize="18sp"
             android:textAlignment="center"
