--- a/app/src/main/res/layout/meminta_histori.xml
+++ b/app/src/main/res/layout/meminta_histori.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rl_layoutHistori"
-    android:background="@color/puteh"
+    android:background="@color/abu"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="2dp"
@@ -28,9 +28,8 @@
         <ImageView
             android:id="@+id/tap_edit"
             android:layout_centerInParent="true"
-            android:background="@color/puteh"
-            android:layout_width="16dp"
-            android:layout_height="20dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_alignParentRight="true"
             android:src="@drawable/ic_kanan"
             />
