--- a/app/src/main/res/layout/meminta_histori.xml
+++ b/app/src/main/res/layout/meminta_histori.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rl_layoutHistori"
-    android:background="@color/abu"
+    android:background="@color/kuningluntur"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="2dp"
