--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -31,15 +31,15 @@
 
     </group>
 
-    <item android:title="Tools">
-        <menu>
+<!--    <item android:title="Tools">-->
+<!--        <menu>-->
 
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="KE KASIR" />
-        </menu>
-    </item>
+<!--            <item-->
+<!--                android:id="@+id/nav_send"-->
+<!--                android:icon="@drawable/ic_menu_send"-->
+<!--                android:title="KE KASIR" />-->
+<!--        </menu>-->
+<!--    </item>-->
 
 
 </menu>
